--- a/study/index.css
+++ b/study/index.css
@@ -125,8 +125,8 @@ a{
     color: #00a4ff;
 }
 .left li span{
-    display: inline-block;
-    margin-left: 86px;
+    float: right;
+    margin-right: 21px;
 }
 .wrapper .banner {
     height: 421px;
@@ -199,11 +199,117 @@ a{
 .text li a:hover{
     color: rgb(0 164 255);
 }
-
-
-
-
-
+/* recommend */
+.recommend .doc{
+    margin-top: 37px;
+    height: 19px;
+}
+.doc span{
+    float: left;
+    font-size: 20px;
+    color: #494949;
+    width: 80px;
+    height: 19px;
+    line-height: 19px;
+}
+.doc a{
+    float: right;
+    margin-right: 35px;
+    margin-top: 8px;
+    color: #a5a5a5;
+}
+.doc a:hover{
+    color: rgb(0 164 255);
+}
+.recommend .image{
+    margin-top: 21px;
+    height: 555px;
+}
+.image .father{
+    position: relative;
+    float: left;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    width: 228px;
+    height: 270px;
+}
+.father .position{
+    position: absolute;
+    width: 40px;
+    height: 20px;
+    top: 4px;
+    right: -4px;
+}
+.father img{
+    width: 228px;
+}
+.father span{
+    float: left;
+    margin: 21px 25px 20px 24px;
+}
+.father .son{
+    margin: 77px 84px 27px 23px;
+}
+.father .son .son1{
+    float: left;
+    padding-right: 10px;
+    font-size: 12px;
+    color: #ff7c2d;
+}
+.father .son .son2{
+    float: left;
+    padding-left: 10px;
+    font-size: 12px;
+    color: #999999;
+}
+#special{
+    margin-right: 0;
+    float: left;
+    width: 228px;
+    height: 270px;
+}
+/* footer */
+.footer {
+    height: 415px;
+    background-color: #fff;
+}
+.footer .w {
+    padding-top: 35px;
+}
+.copyright {
+    float: left;
+}
+.copyright p {
+    font-size: 12px;
+    color: #666;
+    margin: 20px 0 15px 0;
+}
+.copyright .app {
+    display: block;
+    width: 118px;
+    height: 33px;
+    border: 1px solid #00a4ff;
+    text-align: center;
+    line-height: 33px;
+    color: #00a4ff;
+    font-size: 16px;
+}
+.links {
+    float: right;
+}
+.links dl {
+    float: left;
+    margin-left: 146px;
+}
+.links dl dt {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 5px;
+}
+.links dl dd a {
+    color: #333;
+    font-size: 12px;
+}
 
 
 
