--- a/jd/base.css
+++ b/jd/base.css
@@ -37,11 +37,11 @@ input {
     /*  取消轮廓线 */
     outline: none;
 }
-
 body {
     background-color: #fff;
     font: 12px/1.5 'Microsoft YaHei', 'Heiti SC', tahoma, arial, 'Hiragino Sans GB', \\5B8B\4F53, sans-serif;
-    color: #666
+    color: #666;
+    width: 102%;
 }
 
 .hide,
