--- a/jd/styles/detail.css
+++ b/jd/styles/detail.css
@@ -339,6 +339,133 @@
     text-align: center;
     color: #efefef;
 }
+.product-introduction{
+    padding-top: 30px;
+}
+.introduction-left{
+    float: left;
+    width: 210px;
+    height: 2083px;
+    border: solid 1px #dddddd;
+}
+.introduction-left-left{
+    float: left;
+    width: 105px;
+    height: 35px;
+    color: #c81623;
+    line-height: 35px;
+    text-align: center;
+}
+.introduction-left-right{
+    float: left;
+    width: 103px;
+    height: 34px;
+    border: dashed 1px #ededed;
+    color: #333333;
+    line-height: 35px;
+    text-align: center;
+    background-color: #f1f1f1;
+}
+.introduction-left-img{
+    float: left;
+    width: 210px;
+}
+.introduction-left-img .left-img-item{
+    float: left;
+    position: relative;
+    padding: 7px 12px 0 13px;
+    line-height: 17px;
+}
+.introduction-left-img img{
+    padding-top: 22px;
+    padding-left: 50px;
+    padding-bottom: 22px;
+    width: 80px;
+    height: 105px;
+}
+.introduction-left-img .left-img-text{
+    display: inline-block;
+    width: 176px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.left-img-cart{
+    margin-top: 17px;
+    margin-left: 42px;
+    width: 90px;
+    height: 28px;
+    line-height: 28px;
+    text-align: center;
+    background-color: #ededed;
+}
+.left-img-border{
+    width: 209px;
+    height: 234px;
+    border: solid 1px #ededed;
+}
+.img-item-position{
+    position: absolute;
+    top: 180px;
+    left: 7px;
+}
+.product-introduction .introduction-right{
+    float: right;
+    margin-left: 4px;
+    width: 979px;
+    height: 10px;
+}
+.introduction-right-top{
+    height: 41px;
+    background-color: #f1f1f1;
+    border: solid 1px #dddddd;
+}
+.introduction-right-choose{
+    float: left;
+    width: 87px;
+    height: 41px;
+    background-color: #c81623;
+    font-size: 12px;
+    line-height: 39px;
+    text-align: center;
+    color: #efefef;
+}
+.introduction-right-top span{
+    display: inline-block;
+    padding-right: 40px;
+    padding-top: 12px;
+    line-height: 16px;
+}
+.introduction-right-content{
+    position: relative;
+}
+.introduction-right-content .content-text{
+    float: left;
+    position: absolute;
+    top: 25px;
+    left: 22px;
+}
+.introduction-right-content .content-img-one{
+    float: right;
+    position: absolute;
+    top: 336px;
+    right: 0;
+    width: 979px;
+    height: 774px;
+    background-color: #fff;
+}
+.content-img-two{
+    width: 979px;
+    height: 896px;
+    position: absolute;
+    top: 1106px;
+    right: 0;
+}
+
+
+
+
+
 
 
 
