完成注册页面

--- a/jd/styles/detail.css
+++ b/jd/styles/detail.css
@@ -461,8 +461,13 @@
     top: 1106px;
     right: 0;
 }
-
-
+.body{
+    position: relative;
+}
+.footer{
+    position: absolute;
+    top: 2930px;
+}
 
 
 
